<resources>
  <string name="add_a_tip">Add a Tip</string>
  <string name="add_friends_activity_label">Foursquare Add Friends</string>
  <string name="add_venue_activity_label_add_venue">Foursquare Add a New Venue</string>
  <string name="add_venue_activity_label_edit_venue">Foursquare Propose Venue Edits</string>
  <string name="add_venue_error_toast_venue_null">Unable to add venue!</string>
  <string name="add_venue_progress_bar_title_add_venue">Add Venue</string>
  <string name="add_venue_progress_bar_title_edit_venue">Submit Venue Edits</string>
  <string name="add_venue_progress_bar_message_add_venue">Adding venue...</string>
  <string name="add_venue_progress_bar_message_edit_venue">Submitting venue edits...</string>
  <string name="add_venue_activity_btn_add_venue">Add Venue</string>
  <string name="add_venue_activity_btn_submit_edits">Submit Edits</string>
  <string name="add_venue_activity_edit_venue_success">Thank you for submitting your venue edits.</string>
  <string name="add_venue_activity_edit_venue_fail">There was an error submitting your venue edits, please try again.</string>
  <string name="add_venue_activity_pick_category_label">Pick a category</string>
  <string name="add_venue_activity_progress_loading_categories">Loading categories...</string>
  <string name="add_venue_activity_error_no_venue_name">Please supply a venue name.</string>
  <string name="add_venue_activity_error_no_venue_address">Please supply a venue address.</string>
  <string name="add_venue_activity_error_no_venue_city">Please supply a venue city.</string>
  <string name="add_venue_activity_error_no_venue_state">Please supply a venue state.</string>
  <string name="address">Address</string>
  <string name="app_name">Foursquare</string>
  <string name="authtoken_type">com.joelapenna.foursquared.account</string>
  <string name="badges_header">Badges</string>
  <string name="call">Call</string>
  <string name="checkin_action_label">Check-in!</string>
  <string name="checkin_badges">You\'ve just unlocked</string>
  <string name="checkin_points">Points</string>
  <string name="checkin_score">Your Check-in score</string>
  <string name="checkin_specials">Specials</string>
  <string name="checkin_specials_nearby">Nearby Venues that have Specials</string>
  <string name="checkin_title_shouted">Shouted!</string>
  <string name="checkin_title_checking_in">Checking in @%s</string>
  <string name="checkin_totals">Total:</string>
  <string name="checkin_title_result">Checked in!</string>
  <string name="checkins_activity_label">Foursquare Friends</string>
  <string name="checkins_label">Friends</string>
  <string name="city">City</string>
  <string name="cross_street">Cross Street</string>
  <string name="feedback_error">Couldn\'t find configured email client.</string>
  <string name="feedback_label">Send Force-Close Report</string>
  <string name="feedback_more">If you are reporting a problem please answer the questions below:</string>
  <string name="feedback_question_additional_information">Please provide any additional information below.</string>
  <string name="feedback_question_expected_output">What is the expected output? What do you see instead?</string>
  <string name="feedback_question_how_to_reproduce">What steps will reproduce the problem?</string>
  <string name="feedback_subject">Foursquare for Android Feedback</string>
  <string name="friends_appwidget_3x3_label">Foursquare Friends (3x3)</string>
  <string name="friends_appwidget_footer_text">Last Updated %s</string>
  <string name="friends_appwidget_not_logged_in">Please log in.</string>
  <string name="friendsactivity_title_finished">Foursquare Friends</string>
  <string name="friendsactivity_title_searching">Foursquare - Searching for Friends</string>
  <string name="friendsactivity_title_sort_recent">Last 3 Hours</string>
  <string name="friendsactivity_title_sort_today">Today</string>
  <string name="friendsactivity_title_sort_yesterday">Yesterday</string>
  <string name="friendsactivity_title_sort_older">Older</string>
  <string name="friendsactivity_title_sort_other_city">Friends in other cities</string>
  <string name="friendsactivity_title_sort_distance">Friends Nearby</string>
  <string name="friendsactivity_menu_sort_method">Sort checkins by...</string>
  <string name="friendsactivity_menu_sort_time">Recent</string>
  <string name="friendsactivity_menu_sort_distance">Nearby</string>
  <string name="friendsactivity_menu_map">Map</string>
  <string name="friendsactivity_menu_leaderboard">Leaderboard</string>
  <string name="friendsactivity_menu_add_friends">Add Friends</string>
  <string name="friendsactivity_search_in_progress">A search is already in progress.</string>
  <string name="friendsmapactivity_no_checkins">No recent friend checkins nearby.</string>
  <string name="friendsactivity_menu_friend_requests">Friend Requests</string>
  <string name="last_seen_header">Last Seen</string>
  <string name="loading">Loading...</string>
  <string name="login_dialog_message">Please wait while logging into Foursquare...</string>
  <string name="login_dialog_title">Logging in...</string>
  <string name="login_failed_login_toast">Unable to log in. Please check your phone number and password.</string>
  <string name="login_get_started">Get Started</string>
  <string name="login_get_started_more">Got a foursquare account? We just need your email or phone# and password</string>
  <string name="login_label">Log-in</string>
  <string name="login_welcome_toast">Welcome to Foursquare!</string>
  <string name="map_label">Map</string>
  <string name="mayor_header">Mayor</string>
  <string name="myinfo_label">My Info</string>
  <string name="nearby_label">Places</string>
  <string name="nearby_menu_add_venue">Add Venue</string>
  <string name="nearby_venues_no_location">Your location could not be found! Make sure network or GPS location services are turned on, then try refreshing the venues list again!</string>
  <string name="nearby_venues_label_nearby">Nearby</string>
  <string name="need_an_account">Need an account?</string>
  <string name="no_checkins_be_the_first">No recent checkins here!</string>
  <string name="no_friend_checkins">No recent friend checkins!</string>
  <string name="no_location_providers">Unable to determine location. Please Enable GPS or Network Location</string>
  <string name="no_nearby_venues">No nearby venues!</string>
  <string name="no_search_results">No search results.</string>
  <string name="no_tips_be_the_first">No tips here yet, be the first to add one!</string>
  <string name="password">Password</string>
  <string name="phone_number">Phone Number</string>
  <string name="phone_number_or_email">Phone or Email</string>
  <string name="preference_activity_label">Foursquare Preferences</string>
  <string name="preferences_additional_settings">Additional Settings</string>
  <string name="preferences_additional_settings_summary">Modify additional settings with foursquare.com.</string>
  <string name="preferences_cache_geo_loc_for_searches_title">Geolocation Caching</string>
  <string name="preferences_cache_geo_loc_for_searches_on">Cache geolocation between venue searches.</string>
  <string name="preferences_cache_geo_loc_for_searches_off">Clear your geolocation on each venue search.</string>
  <string name="preferences_category_checkin_defaults">Check-in Defaults</string>
  <string name="preferences_category_friends">Friends</string>
  <string name="preferences_category_startup">Startup</string>
  <string name="preferences_category_user_actions">User Actions</string>
  <string name="preferences_changelog">Changelog</string>
  <string name="preferences_changelog_summary">See what has changed between application versions.</string>
  <string name="preferences_city_name_summary">Update your foursquare city."</string>
  <string name="preferences_city_name_title">Update City</string>
  <string name="preferences_friend_add_summary">Find others who are also on Foursquare.</string>
  <string name="preferences_friend_add_title">Add Friends</string>
  <string name="preferences_friend_requests_summary">Manage pending friend requests.</string>
  <string name="preferences_friend_requests_title">Friend Requests</string>
  <string name="preferences_immediate_checkin_summary_off">Prompt for a shout when using the check-in button on a venue page.</string>
  <string name="preferences_immediate_checkin_summary_on">Do not prompt for a shout when using the check-in button on a venue page.</string>
  <string name="preferences_immediate_checkin_title">Check-in without prompt</string>
  <string name="preferences_label">Preferences</string>
  <string name="preferences_logout_summary">Sign out of Foursquare.</string>
  <string name="preferences_logout_title">Logout</string>
  <string name="preferences_other_settings">Other Settings</string>
  <string name="preferences_share_checkin_title">Tell my friends</string>
  <string name="preferences_share_summary_off">By default, don\'t tell my friends when I check-in.</string>
  <string name="preferences_share_summary_on">By default, tell my friends when I check-in.</string>
  <string name="preferences_startup_tab">Startup Tab</string>
  <string name="preferences_startup_tab_summary">Select which tab to display at startup.</string>
  <string name="preferences_sync_contacts_title">Sync to Contacts</string>
  <string name="preferences_sync_contacts_off">Don\'t sync friends\' info to Contacts</string>
  <string name="shout_hint">Shout, shout, let it all out...                              </string>
  <string name="state">State</string>
  <string name="tell_facebook">Tell Facebook</string>
  <string name="tell_my_friends">Tell my Friends</string>
  <string name="tell_twitter">Tell Twitter</string>
  <string name="tell_followers">Send to followers</string>
  <string name="venue_name">Venue Name</string>
  <string name="zip_code">Zip Code</string>
  <string name="add_friends_instructions">Foursquare is more fun when you connect with your friends. Your friends can see the email address and phone number you gave us when you signed up, so choose wisely.</string>
  <string name="add_friends_by_name_or_phone_btn_label">Find by name or phone number</string>
  <string name="add_friends_by_twitter_btn_label">Find Twitter friends</string>
  <string name="add_friends_by_address_book_btn_label">Scan my address book</string>
  <string name="prelaunch_text"></string>
  <string name="prelaunch_button"></string>
  <string name="prelaunch_checkbox_dont_show_again"></string>
  <string name="pings_settings_instructions">Pings run in the background at the interval you choose below. When a friend checks-in nearby, you\'ll see a Foursquare icon appear on your notification bar.\n\nYou can turn pings off per user from their user details page.</string>
  <string name="pings_settings_on">Enable pings</string>
  <string name="pings_settings_interval">Set the refresh rate for pings:</string>
  <string name="pings_settings_vibrate">Vibrate the phone when new pings are received</string>
  <string name="pings_settings_spinner_interval_prompt">Pings Interval</string>
  <string name="edit_venue_options_instructions">If you know the information for this venue is incorrect, you can suggest updates here. We\'re working through the suggestions on our end and will make updates as soon as we can. Thanks for your help!</string>
  <string name="edit_venue_options_btn_edit_venue">Flag venue info</string>
  <string name="edit_venue_options_btn_flag_as_mislocated">Flag incorrect address</string>
  <string name="edit_venue_options_btn_flag_as_duplicate">Flag venue as duplicate</string>
  <string name="edit_venue_options_btn_flag_as_closed">Flag venue as closed</string>
  <string name="settings_user_info_label_user_id">User ID:</string>
  <string name="settings_user_info_label_username">User Name:</string>
  <string name="settings_user_info_label_email">Email:</string>
</resources>