<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
  <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">

      <EditText
        android:id="@+id/nameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        android:hint="@string/venue_name" />

      <TextView
        android:id="@+id/addressLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        style="@style/listSeparatorTextViewStyle" />

      <EditText
        android:id="@+id/addressEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/address" />

      <EditText
        android:id="@+id/crossstreetEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/cross_street" />

      <EditText
        android:id="@+id/cityEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/city" />


      <TableLayout
        android:id="@+id/buttonBar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TableRow>
          <EditText
            android:id="@+id/stateEditText"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/state" />
          <EditText
            android:id="@+id/zipEditText"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:hint="@string/zip_code" />
        </TableRow>
      </TableLayout>

      <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/listSeparatorTextViewStyle"

        android:text="@string/phone_number" />

      <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:phoneNumber="true"
        android:imeOptions="actionDone"
        android:hint="555-2368" />
      
      <Button
        android:id="@+id/addCategoryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Pick Category" />
        
      <Button
        android:id="@+id/addVenueButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/add_venue_label" />
    </LinearLayout>
  </ScrollView>
</merge>
