<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2010 Mark Wyszomierski -->
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="8dip"
  android:paddingRight="8dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  >
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">
      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friends_instructions"
        android:paddingBottom="20dip" />
     
      <Button
        android:id="@+id/findFriendsByAddressBook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friends_by_address_book_btn_label" />
      
      <Button
        android:id="@+id/findFriendsByTwitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friends_by_twitter_btn_label" />
         
      <Button
        android:id="@+id/findFriendsByNameOrPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friends_by_name_or_phone_btn_label" />
      
    </LinearLayout>
  </ScrollView>
</LinearLayout>
