<?xml version="1.0" encoding="utf-8"?>
  <!-- Copyright 2009 Joe LaPenna -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center"
  android:isScrollContainer="true"
  android:padding="5dip"
  android:background="@drawable/foursquare_gradient">
  <ImageView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="3dip"
    android:scaleType="centerInside"
    android:src="@drawable/main_logo" />
  <TextView
    android:id="@+id/newAccountTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:paddingBottom="2dip"
    android:textAppearance="@android:style/TextAppearance.Large"
    android:textColor="#0000ee"
    android:text="@string/need_an_account" />
  <EditText
    android:id="@+id/phoneEditText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:textAppearance="@android:style/TextAppearance.Large"
    android:hint="@string/phone_number_or_email" />
  <EditText
    android:id="@+id/passwordEditText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:imeOptions="actionDone"
    android:textAppearance="@android:style/TextAppearance.Large"
    android:hint="@string/password" />
  <Button
    android:id="@+id/button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:enabled="false"
    android:textAppearance="@android:style/TextAppearance.Large"
    android:text="@string/login_label" />
</LinearLayout>
