<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2010 Mark Wyszomierski -->
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:paddingLeft="8dip"
      android:paddingRight="8dip"
      android:paddingTop="8dip"
      android:paddingBottom="8dip">
      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        android:text="@string/prelaunch_text" />
     
      <Button
        android:id="@+id/btnOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prelaunch_button" />
        
      <CheckBox 
        android:id="@+id/checkboxDontShowAgain" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/prelaunch_checkbox_dont_show_again"  />
        
    </LinearLayout>
  
</ScrollView>
</LinearLayout>
