<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2010 Mark Wyszomierski -->

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/white" >

  <LinearLayout
    android:id="@+id/friendsActivityEmptyInner"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="5dip"
    android:orientation="vertical"
    android:gravity="center_horizontal" > 
   
    <ImageView
      android:id="@+id/friendsActivityEmptyImageView"
  	  android:layout_width="170dip"
	  android:layout_height="155dip"
      android:src="@drawable/sadface"
      android:scaleType="fitXY"
      android:layout_marginTop="40dip" />
    
    <TextView
      android:id="@+id/friendsActivityEmptyTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black_end"
      android:textAppearance="@android:style/TextAppearance.Medium" 
      android:singleLine="true"
      android:paddingTop="20dip"
      android:paddingBottom="20dip"
      android:text="@string/no_friend_checkins"/>
    
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="horizontal"
      android:gravity="bottom"
      android:paddingLeft="15dip"
      android:paddingRight="15dip" >
     
      <Button
        android:id="@+id/friendsActivityEmptyBtnAddFriends"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/preferences_friend_add_title" />
   
      <Button
        android:id="@+id/friendsActivityEmptyBtnFriendRequests"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/preferences_friend_requests_title" />
  
    </LinearLayout>
  
  </LinearLayout>
  
</ScrollView>